--- a/app/src/main/res/layout/activity_p_home.xml
+++ b/app/src/main/res/layout/activity_p_home.xml
@@ -128,7 +128,7 @@
 
             <TextView
                 android:id="@+id/text_rate"
-                android:layout_width="35dp"
+                android:layout_width="wrap_content"
                 android:layout_height="19dp"
                 android:fontFamily="@font/gmarketmedium"
                 android:text=""
