--- a/app/src/main/res/layout/dialog01.xml
+++ b/app/src/main/res/layout/dialog01.xml
@@ -52,6 +52,7 @@
         android:gravity="center_horizontal" />
 
     <TextView
+        android:id="@+id/txtView_dialog"
         android:layout_width="199dp"
         android:layout_height="78dp"
         android:layout_marginTop="24dp"
